k8s/overlays/dev/replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-portal
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orion-api
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow
spec:
  replicas: 1
