k8s/overlays/dev/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-portal
spec:
  template:
    spec:
      containers:
        - name: atlas-portal
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orion-api
spec:
  template:
    spec:
      containers:
        - name: orion-api
          resources:
            requests:
              cpu: 50m
              memory: 96Mi
            limits:
              cpu: 250m
              memory: 256Mi
